<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maven Quickstart</string>
    <string name="hello">Hello mobile.android!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_email_address">Input email address</string>
    <string name="hint_password">Input password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_password"><u>Forget password?</u></string>
    <string name="choose_security_question">Choose security questions</string>
    <string name="error_email_address">Please input a valid email.</string>
    <string name="error_phone_number">Please input a valid phone number.</string>
    <string name="error_empty_field">This field can not be empty.</string>
</resources>