<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/register_email_edittext" android:layout_alignParentTop="true"
            android:layout_marginTop="49dp"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:hint="@string/hint_email_address"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/register_password_textedit" android:layout_below="@+id/register_email_edittext"
            android:layout_marginTop="47dp" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" android:hint="@string/hint_password"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/register_phonenumber_textedit"
            android:hint="Input phone number(optional)" android:layout_below="@+id/register_password_textedit"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_marginTop="36dp" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/security_question_spinner"
            android:layout_marginTop="47dp" android:layout_below="@+id/register_phonenumber_textedit"
            android:entries="@array/security_questions"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_security_anser_textedit" android:layout_below="@+id/security_question_spinner"
            android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true" android:hint="Security answer"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register_action_button" android:layout_below="@+id/register_security_anser_textedit"
            android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
            android:layout_marginTop="36dp"/>
</RelativeLayout>